--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,1 +1,4 @@
-$primary-color: #3498db;
+$primary-color: black;
+$secondary-color: #ffc107;
+$text-color: white;
+$overlay-background-color: rgba(0, 0, 0, 0.5);
